[package]
name = "rustcalculator"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"
authors = ["Renan Maganha"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.12"

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[[test]]
name = "calculator_tests"
path = "tests/calculator_tests.rs"

[[test]]
name = "shunting_yard_algorithm_tests"
path = "tests/shunting_yard_algorithm_tests.rs"